<resources>

    <string name="app_name">Your App Name</string>

    <string name="url_terms">http://your_terms.html</string>
    <string name="url_privacy">http://your_privacy.html</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <string name="title_activity_show_item">Assignment</string>
    <string name="title_activity_my_tasks">My assignments</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_new_friend">New Friend</string>
    <string name="title_activity_terms">Terms</string>
    <string name="title_activity_new_assignment">New Assignment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_screen_name">Display Name</string>
    <string name="title_activity_reassign">Move assignment</string>

    <string name="default_notification_channel_id">taskdj_channel</string>
    <string name="default_notification_channel_name">news</string>
    <string name="fcm_header">TaskDJ</string>

    <string name="close_account">Close Account</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="discarded">Discarded</string>
    <string name="email">E-mail</string>
    <string name="confirm">Confirm</string>
    <string name="finished_task">Did you finish </string>
    <string name="delete_assignment">Delete assignment</string>
    <string name="discard_assignment">Discard assignment</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="goodbye">Your account has been closed. Welcome back anytime!</string>
    <string name="todo">To Do</string>
    <string name="past_due">Past Due</string>
    <string name="complete">Complete</string>
    <string name="complete_approve">Complete please approve</string>
    <string name="value">Value</string>
    <string name="no_user">No user with this e-mail.</string>
    <string name="user_create">Please ask user to download app and sign up</string>
    <string name="today">Today</string>
    <string name="terms">Terms of Service</string>
    <string name="privacy">Privacy Policy</string>
    <string name="delete_friend">Remove Friend</string>
    <string name="friend_warning">This will remove any groups and activities shared!</string>
    <string name="new_assignment">You have a new assignment!</string>
    <string name="logout">Logout</string>
    <string name="my_assignments">My Assignments</string>
    <string name="verify_mail">Please verify your e-mail</string>
    <string name="friend_info">Friend needs TaskDJ for Android</string>
    <string name="clear_log">Clear log</string>

    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="user_failure">Unknown failure. Press back to reset</string>
    <string name="unknown_error">Unknown error</string>
    <string name="not_add_self">You cannot add yourself as friend</string>
    <string name="invitation_sent">Invitation sent</string>
    <string name="invitation_not_sent">Invitation not sent</string>
    <string name="screen_name">Screen name</string>
    <string name="too_short">6-15 characters</string>
    <string name="need_value">Need value</string>
    <string name="receive">Give assignments to friend</string>
    <string name="give">Get assignments from friend</string>
    <string name="no_recent">No history</string>
    <string name="accept_terms">You must accept the terms and privacy policy</string>
    <string name="accept">Accept</string>
    <string name="do_next">Continue</string>
    <string name="name_in_use">Name was not changed</string>
    <string name="get_paid">Choose your currency in settings</string>
    <string name="task">Task</string>
    <string name="description">Description</string>
    <string name="complete_assignment">Complete Assignment</string>
    <string name="completed">completed assignment</string>
    <string name="settlement_history">Log</string>
    <string name="feedback">Feedback</string>
    <string name="approved">Approved</string>
    <string name="approved_confirm">Approved. Please confirm</string>
    <string name="payment_received">Payment received</string>
    <string name="has_approved">has approved</string>
    <string name="for_word">for</string>
    <string name="of_word">of</string>
    <string name="accepted_from">accepted payment from </string>
    <string name="refresh">Refresh</string>
    <string name="moveinfo">Long touch on assignment to reassign</string>
    <string name="waiting_approval">Waiting approval</string>
    <string name="move_assignment">Move assignment</string>
    <string name="confirm_payment">Confirm payment</string>
    <string name="balance">Balance</string>
    <string name="total_earnings">Total earnings</string>
    <string name="add_calendar">Add to calendar</string>
    <string name="total_assignments">Total assignments</string>
    <string name="unpaid_balance">Unpaid balance</string>
    <string name="only_todo_move">Only new assignments can be moved</string>
    <string name="have_discarded">Discarded assignments</string>
    <string name="need_approvals">Need approval</string>
    <string name="assignment_approved">Assignment approved</string>
    <string name="version">Version</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_sent">Reminder sent</string>
    <string name="no_license">No license. Please purchase app from Google Play</string>
    <string name="sign_in">Sign In</string>
    <string name="change_date">Change Date</string>
    <string name="reset">Reset</string>
    <string name="friends">Friends</string>
    <string name="login_again">You need to login again to close the account</string>
    <string name="resend_verification">Send verification mail again</string>
    <string name="mail_sent">Mail sent</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="purchase_failed">Purchase failed</string>
    <string name="upgrade">Remove ads</string>
    <string name="press_to_purchase">Press OK to purchase from Google Play. No charges before confirmed in Google Play.</string>
    <string name="click_to_read">Read and Accept</string>
    <string name="click_to_close">Close</string>
    <string name="general">General</string>
    <string name="advertising">Advertising</string>
    <string name="currency">Choose currency to get paid</string>
    <string name="limit_reached">Limit reached</string>
    <string name="limit_friends">Maximum limit friends reached.</string>
    <string name="limit_assignments">Maximum limit assignments reached.</string>
    <string name="not_move_self">Assignment must be moved to another user</string>
    <string name="logged_off">Logged off</string>
    <string name="reminder_title">Reminder</string>
    <string name="optional">Optional</string>

    <string-array name="currency_list">
        <item>None</item>
        <item>Points</item>
        <item>$</item>
        <item>€</item>
        <item>£</item>
        <item>kr</item>
        <item>CHF</item>
    </string-array>

    <string-array name="currency_index">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>


    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string name="invitation_title">TaskDJ</string>
    <string name="invitation_message">Please join</string>
    <string name="invitation_deep_link">https://taskdj.com</string>
    <string name="invitation_custom_image">https://taskdj.com/img/logo.png</string>
    <string name="invitation_cta">Click to proceed</string>

    <!-- Strings related to Settings -->
    <string name="pref_title_notifications">Notifications</string>


</resources>
