<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oslo7.tdjpro.NewFriendActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/friend_info"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:theme="@style/Text.Field2"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputlayout"
            android:layout_below="@id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_alignParentStart="true"
                android:ems="30"
                android:imeOptions="actionDone"
                android:hint="@string/email"
                android:maxLength="30"
                android:layout_marginTop="20dp"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:theme="@style/Text.Field2" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox android:id="@+id/checkbox_receive"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/inputlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/receive"/>

        <CheckBox android:id="@+id/checkbox_give"
            android:layout_below="@+id/checkbox_receive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/give"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox_give"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <Button android:id="@+id/buttonOK"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:theme="@style/Blue.Button" />

            <Button android:id="@+id/buttonCancel"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:theme="@style/Blue.Button" />

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>