<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.oslo7.tdjpro.NewTaskActivity">

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:id="@+id/taskName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/title_activity_new_assignment"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:theme="@style/Text.Field2"
                android:layout_alignParentStart="true" />

            <ImageView
                android:contentDescription=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_hint"
                android:onClick="onClick"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"/>

            <EditText android:id="@+id/editTaskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_below="@id/taskName"
                android:layout_alignParentStart="true"
                android:inputType="textCapSentences"
                android:maxLength="30"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:theme="@style/Text.Field2" />

            <TextView
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:maxLength="30"
                android:text="@string/description"
                android:layout_below="@id/editTaskName"
                android:layout_alignParentStart="true"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:theme="@style/Text.Field2"
                />

            <EditText android:id="@+id/editTaskDescrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:layout_marginStart="10dp"
                android:layout_below="@id/description_text"
                android:layout_alignParentStart="true"
                android:maxLines="3"
                android:scrollbars="vertical"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLength="100"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:theme="@style/Text.Field2" />

            <TextView android:id="@+id/textValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_below="@id/editTaskDescrip"
                android:text="@string/value"
                android:visibility="gone"
                android:hint="0"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:theme="@style/Text.Field2" />

            <EditText android:id="@+id/editValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/value"
                android:layout_marginStart="10dp"
                android:layout_below="@id/editTaskDescrip"
                android:layout_toEndOf="@+id/textValue"
                android:visibility="gone"
                android:maxLength="8"
                android:ems="8"
                android:inputType="numberDecimal"
                android:gravity="start" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editValue"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp">

                <Button android:id="@+id/buttonOK"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:theme="@style/Blue.Button" />

                <Button android:id="@+id/buttonCancel"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_marginStart="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:theme="@style/Blue.Button" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>